# Multimodal-MTRSSM

./: .gitignore  README.md  pyproject.toml
evaluation/: __init__.py  evaluate_word_transitions.py  evaluate_word_transitions_mrssm.py  evaluate_word_transitions_mtmrssm.py  mnist_classifier.py
scripts/: _train_common.py  convert_audio_mnist_data.py  train_mopoe_mmtrssm.py  train_mopoe_mrssm.py
src/multimodal_rssm/models/: __init__.py  callback.py  core.py  dataset.py  networks.py  objective.py  state.py  transform.py
src/multimodal_rssm/models/mmtrssm/: __init__.py  state.py
src/multimodal_rssm/models/mmtrssm/mopoe_mmtrssm/: __init__.py  callback.py  core.py
src/multimodal_rssm/models/mmtrssm/mopoe_mmtrssm/configs/: default.yaml
src/multimodal_rssm/models/mrssm/: __init__.py  callback.py  dataset.py
src/multimodal_rssm/models/mrssm/mopoe_mrssm/: __init__.py  callback.py  core.py
src/multimodal_rssm/models/mrssm/mopoe_mrssm/configs/: default.yaml
